*demorse-1.0 (19 Jul 2012)

  19 Jul 2012; Michael Weber <xmw@gentoo.org> +demorse-1.0.ebuild,
  +files/demorse-1.0-Makefile.patch:
  media-radio/demorse: Version bump (oss -> alsa)

*demorse-0.9 (22 Jun 2012)

  22 Jun 2012; Michael Weber <xmw@gentoo.org> +demorse-0.9.ebuild,
  +files/demorse-0.9-Makefile.patch, +metadata.xml:
  media-radio/demorse: Initial import