@@ -3,10 +3,11 @@ Hash: SHA256
 
 DIST demorse-0.9.tar.bz2 27663 SHA256 9e7b09e514aa822fded59a1a199e3785535e11ac0e2fee6aa3376fb1d461a7f2 SHA512 db857266cbbb6af7be5e749e4b16cfb319766637f3a4bd534719a9dd3381291ad86e977bda5d78d5608df5b2acf7dca75617ce49eb594c43098a2710197f6fc6 WHIRLPOOL f9373c54f09263a2049a1891044e610ac50bf4f049cd2ea833e182826d0d14265b7f95770539b9e8c18b471e43c93f2d5368c31c45bc875d3491163e714aec44
 DIST demorse-1.0.tar.bz2 28382 SHA256 18207ae2f1d7c4e37322feee5df4d9e501081dc2f3c00cdd65b2b40daeb9a8be SHA512 60961efa8a0a0ea8b5f508e87a964cf957230f70e6d44f9ffa39a2c055861546e7759780d04d2f4b7e3c762160fcbb0984c8f7828418199195000caeff7f33d5 WHIRLPOOL 6367ddfe700fd4f19b0f83b52879158400f4a76ad4fa0b485b58b2615e2e5e3ffa3c703433ee6be2caa7e542c601d9230324cd0fdaea808cf9735e8899ee2586
+DIST demorse-1.1.tar.bz2 97239 SHA256 fde3da5fc64074aba43635e2c3efed719cb23c02a4dbe5821a61945fcfafdb56 SHA512 6a3684001d50142c25f4670b24c61fb5f0b0ac715ccb27ec0e5417fe0705c18a81baa3d41e584612b7336b7b02afbebe9eed673e78b3f0b6b873815da8c5c129 WHIRLPOOL 13b349dfce7aae16b33e52757539d95b382e3debfe236c0a82c6718ffd2dc64210c17eda5982cc70382747be839b795dc765bd1a093e0d236b5dd479faf52885
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAlAHoBkACgkQknrdDGLu8JB7SwD+O/EeliKzLgz3ZhpnEqzXbPRw
-edTCb1lT1anUg7sBbbMA/Am7yjewMXvLjnUKwrhuUXzHjYKEv/8qErU38eN8A1mk
-=CUkS
+iF4EAREIAAYFAlFBlisACgkQknrdDGLu8JDjIwD+PkapF1XGUJlRxb8CI2WsHx+o
+kkOkVuMcVBj1RqQhncQA/1OjA/TTXp/K/JqX0thLD3WrFOcFpYi2iu60Yp6bFgTR
+=snx4
 -----END PGP SIGNATURE-----
