@@ -2,9 +2,7 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-EAPI=4
-
-inherit eutils linux-info toolchain-funcs
+EAPI=5
 
 DESCRIPTION="Morse code decoding application for the console"
 HOMEPAGE="http://www.qsl.net/5b4az/pages/morse.html"
@@ -18,21 +16,8 @@ IUSE=""
 RDEPEND="media-libs/alsa-lib"
 DEPEND="${RDEPEND}"
 
-S=${WORKDIR}/${PN}
-
-src_prepare() {
-	epatch "${FILESDIR}"/${P}-Makefile.patch
-	sed -e '/install/s:--strip::' \
-		-i Makefile || die
-}
-
-src_compile() {
-	emake CC="$(tc-getCC)"
-}
-
 src_install() {
-	emake DESTDIR="${D}" BINDIR="${ROOT}"usr/bin \
-		DOCDIR="${ROOT}"usr/share/doc/${PF} install
+	default
 
 	dodoc doc/Morsecode.txt
 	dohtml doc/${PN}.html
