@@ -1,3 +1,9 @@
+*demorse-1.1 (14 Mar 2013)
+
+  14 Mar 2013; Michael Weber <xmw@gentoo.org> +demorse-1.1.ebuild,
+  demorse-0.9.ebuild, demorse-1.0.ebuild:
+  Version bump
+
 *demorse-1.0 (19 Jul 2012)
 
   19 Jul 2012; Michael Weber <xmw@gentoo.org> +demorse-1.0.ebuild,
